styled the cont

--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -9,3 +9,14 @@ body {
   background-color: #222222;
   color: #fff;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  text-align: center;
+  transition: background-color 0.5s ease-in-out;
+}
+
